# mecheye_ros_interface

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists_ubuntu16.txt  CMakeLists_ubuntu18.txt  CMakeLists_ubuntu20.txt  CameraClient.py  LICENSE  README.md  cameraStatus_pb2.py  main.py  migration-guide.md  package.xml
area_scan_3d_camera/: CMakeLists.txt  LICENSE  README.md  package.xml
area_scan_3d_camera/include/: MechMindProfiler.h
area_scan_3d_camera/launch/: start_profiler.py
area_scan_3d_camera/src/: MechMindProfiler.cpp  main.cpp
area_scan_3d_camera/srv/: GetBoolParameter.srv  GetFloatParameter.srv  GetIntParameter.srv  GetProfileROIParameter.srv  GetROIParameter.srv  GetRangeParameter.srv  ProfilerInfo.srv  SetFloatArrayParameter.srv  SetProfileROIParameter.srv  SetROIParameter.srv  SetRangeParameter.srv
include/: CameraClient.h  CameraCmd.h  MechMindCamera.h  PointCloudTools.h  ZmqClient.h  zmq.hpp
launch/: start_camera.launch
mech_eye_tripod/: 30-30-300.SLDPRT  30-30-350.SLDPRT  30-45degree.SLDPRT  40-40-1200.SLDPRT  40-40-320.SLDPRT  40-40-400.SLDPRT  40-40-800.SLDPRT  40-40-support.SLDPRT  ass-tripod.SLDASM  ass-tripod.STL  hinge40.SLDPRT  mechmind-eye.SLDPRT  readme.md
profiler/: CMakeLists.txt  README.md  package.xml
profiler/include/: MechMindProfiler.h
profiler/launch/: start_profiler.launch
profiler/src/: MechMindProfiler.cpp  main.cpp
profiler/srv/: AddUserSet.srv  SetBoolParameter.srv  SetIntParameter.srv
proto/: cameraStatus.pb.cc  cameraStatus.pb.h  cameraStatus.proto  image.pb.cc  image.pb.h  image.proto
src/: CameraClient.cpp  CameraClient.py  MechMindCamera.cpp  PointCloudTools.cpp  ZmqClient.cpp  ZmqClient.py  image_pb2.py  main.cpp  main.py
srv/: AddUserSet.srv  CaptureColorPointCloud.srv  CapturePointCloud.srv  DeviceInfo.srv  Get2DExposureSequence.srv  Get2DSharpenFactor.srv  Get3DROI.srv  GetAllUserSets.srv  GetDepthRange.srv  GetFloatArrayParameter.srv  GetFloatSequenceParameter.srv  GetLaserSettings.srv  GetUhpCaptureMode.srv  GetUhpFringeCodingMode.srv  GetUhpSettings.srv  Set2DExposureMode.srv  Set2DExposureSequence.srv  Set2DROI.srv  Set2DToneMappingEnable.srv  Set3DGain.srv  SetCloudOutlierFilterMode.srv  SetCloudSmoothMode.srv  SetDepthRange.srv  SetEnumParameter.srv  SetFloatParameter.srv  SetFloatSequenceParameter.srv  SetFringeContrastThreshold.srv  SetLaserSettings.srv  SetProjectorAntiFlickerMode.srv  SetProjectorFringeCodingMode.srv  SetProjectorPowerLevel.srv  SetUhpCaptureMode.srv  SetUhpFringeCodingMode.srv  SetUhpSettings.srv
